--- a/examples/test.html
+++ b/examples/test.html
@@ -33,6 +33,7 @@ seajs.use("test");
 <input type="text"  placeholder="用户名" />
 <input type="password"   placeholder="密码" />
 <script type="text/javascript" src="../placeholder/placeholder.js"></script>
+<input type="button" id="btnloadData" value="点我加载数据" />
 <div id="list"></div>
 
 </body>
