--- a/examples/test.html
+++ b/examples/test.html
@@ -34,6 +34,7 @@ seajs.use("test");
 <input type="password"   placeholder="密码" />
 <script type="text/javascript" src="../placeholder/placeholder.js"></script>
 <input type="button" id="btnloadData" value="点我加载数据" />
+<input type="button" id="btngetData" value="得到列表选中的值" />
 <div id="list"></div>
 
 </body>
